--- a/Monopoly/Views/MainWindow.xaml
+++ b/Monopoly/Views/MainWindow.xaml
@@ -3,8 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525">
-    <Grid>
-        <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+        Title="Monopoly" WindowState="Maximized">
+    <DockPanel>
+        
+        <ContentControl prism:RegionManager.RegionName="PlayerInfoRegion" 
+                        DockPanel.Dock="Left"/>
+        <Grid>
+            <ContentControl prism:RegionManager.RegionName="GameFieldRegion"
+                            Width="750" Height="700"/>
+            
+        </Grid>
+    </DockPanel>
 </Window>
