--- a/Monopoly.GameField/Styles/AbstractCardTemplate.xaml
+++ b/Monopoly.GameField/Styles/AbstractCardTemplate.xaml
@@ -1,13 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Monopoly.GameField"
+                    xmlns:viewModels="clr-namespace:Monopoly.GameField.ViewModels"
                     xmlns:model="clr-namespace:Monopoly.Model.Models;assembly=Monopoly.Model"
                     xmlns:abstractModel="clr-namespace:Monopoly.Model.Abstract;assembly=Monopoly.Model"
                     xmlns:helpers="clr-namespace:Monopoly.GameField.Helpers">
     <helpers:ColorToSolidBrushConverter x:Key="ColorToSolidColorBrushConverter"/>
     
-    <DataTemplate x:Key="BottomTownCard" DataType="{x:Type abstractModel:AbstractCard}">
-        <Border BorderBrush="Black" BorderThickness="1">
+    <DataTemplate x:Key="BottomTownCard" DataType="{x:Type viewModels:CardViewModel}">
+        <Border BorderBrush="Black" BorderThickness="1" DataContext="{Binding Card}">
             <DockPanel>
                 <Label DockPanel.Dock="Top" Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}">
                 </Label>
@@ -24,7 +25,7 @@
         </Border>
     </DataTemplate>
 
-    <DataTemplate x:Key="LeftTownCard" DataType="{x:Type abstractModel:AbstractCard}">
+    <DataTemplate x:Key="LeftTownCard" DataType="{x:Type viewModels:CardViewModel}">
         <Border BorderBrush="Black" BorderThickness="1">
             <DockPanel>
                 <Label DockPanel.Dock="Right" Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}">
@@ -42,7 +43,7 @@
         </Border>
     </DataTemplate>
 
-    <DataTemplate x:Key="TopTownCard" DataType="{x:Type abstractModel:AbstractCard}">
+    <DataTemplate x:Key="TopTownCard" DataType="{x:Type viewModels:CardViewModel}">
         <Border BorderBrush="Black" BorderThickness="1">
             <DockPanel>
                 <Label DockPanel.Dock="Bottom" Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}">
@@ -60,7 +61,7 @@
         </Border>
     </DataTemplate>
 
-    <DataTemplate x:Key="RightTownCard" DataType="{x:Type abstractModel:AbstractCard}">
+    <DataTemplate x:Key="RightTownCard" DataType="{x:Type viewModels:CardViewModel}">
         <Border BorderBrush="Black" BorderThickness="1">
             <DockPanel>
                 <Label DockPanel.Dock="Left" Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}">
