--- a/Monopoly.UserField/Styles/PlayerPreviewTemplates.xaml
+++ b/Monopoly.UserField/Styles/PlayerPreviewTemplates.xaml
@@ -1,19 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:Monopoly.UserField"
+                    xmlns:helpers="clr-namespace:Monopoly.UserField.Helpers"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:viewModels="clr-namespace:Monopoly.UserField.ViewModels">
+                    xmlns:viewModels="clr-namespace:Monopoly.Model.ViewModels;assembly=Monopoly.Model"
+                    xmlns:abstract="clr-namespace:Monopoly.Model.Abstract;assembly=Monopoly.Model">
 
-    <Style TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="18"/>
-        <Setter Property="FontWeight" Value="Black"/>
-    </Style>
-    
-    
+
     <DataTemplate x:Key="PlayerRegularPreview" DataType="{x:Type viewModels:PlayerViewModel}">
-        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10">
-            <DockPanel>
-                <Image DockPanel.Dock="Left" Source="{Binding Avatar}" Width="90" Height="90"/>
+        <Border BorderBrush="Black" BorderThickness="1" CornerRadius="10" x:Name="border">
+            <DockPanel Width="250">
+                <Image DockPanel.Dock="Left" Source="{Binding Avatar}" Width="70" Height="70"/>
                 <StackPanel DockPanel.Dock="Left">
                     <TextBlock Text="{Binding Nickname}" HorizontalAlignment="Center"/>
                     <TextBlock HorizontalAlignment="Center">
@@ -23,10 +20,61 @@
                             </Binding>
                         </TextBlock.Text>
                     </TextBlock>
+                    <Grid>
+                        <TextBlock x:Name="decreaseText"
+                                   FontSize="20"
+                                   FontWeight="Heavy"
+                                   Foreground="Red"
+                                   Text="{Binding DecreaseText, NotifyOnTargetUpdated=True}"
+                                   Opacity="1">
+                            <TextBlock.RenderTransform>
+                                <ScaleTransform/>
+                            </TextBlock.RenderTransform>
+                            <i:Interaction.Behaviors>
+                                    <helpers:PlayerPreviewBehavior/>
+                            </i:Interaction.Behaviors>
+                        </TextBlock>
+                        <TextBlock x:Name="increaseText"
+                                   FontSize="20"
+                                   FontWeight="Heavy"
+                                   Foreground="Green"
+                                   Text="{Binding IncreaseText, NotifyOnTargetUpdated=True}"
+                                   Opacity="1">
+                            <TextBlock.RenderTransform>
+                                <ScaleTransform/>
+                            </TextBlock.RenderTransform>
+                            <i:Interaction.Behaviors>
+                                    <helpers:PlayerPreviewBehavior/>
+                            </i:Interaction.Behaviors>
+                        </TextBlock>
+                    </Grid>
                 </StackPanel>
                 <Image DockPanel.Dock="Bottom" Source="{Binding Chip}" Width="30" Height="30"/>
             </DockPanel>
         </Border>
+        <DataTemplate.Triggers>
+            <DataTrigger Binding="{Binding IsActive}" Value="True">
+                <Setter TargetName="border" Property="Border.BorderThickness" Value="2"/>
+                <Setter TargetName="border" Property="Border.BorderBrush" Value="OrangeRed"/>
+            </DataTrigger>
+        </DataTemplate.Triggers>
     </DataTemplate>
-    
+
+    <DataTemplate x:Key="PlayerDetailsPreview" DataType="{x:Type abstract:AbstractPlayer}">
+        <DockPanel Width="250">
+            <Image DockPanel.Dock="Left" Source="{Binding Avatar}" Width="70" Height="70"/>
+            <StackPanel DockPanel.Dock="Left">
+                <TextBlock Text="{Binding Nickname}" HorizontalAlignment="Center"/>
+                <TextBlock HorizontalAlignment="Center">
+                    <TextBlock.Text>
+                        <Binding Path="Money">
+                            <Binding.StringFormat>{0:C}</Binding.StringFormat>
+                        </Binding>
+                    </TextBlock.Text>
+                </TextBlock>
+            </StackPanel>
+            <Image DockPanel.Dock="Bottom" Source="{Binding Chip}" Width="30" Height="30"/>
+        </DockPanel>
+    </DataTemplate>
+
 </ResourceDictionary>
