--- a/Monopoly/Styles/CardTemplates.xaml
+++ b/Monopoly/Styles/CardTemplates.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Monopoly.UserField"
                     xmlns:viewModels="clr-namespace:Monopoly.Model.ViewModels;assembly=Monopoly.Model"
                     xmlns:model="clr-namespace:Monopoly.Model.Models;assembly=Monopoly.Model"
                     xmlns:abstractModel="clr-namespace:Monopoly.Model.Abstract;assembly=Monopoly.Model"
@@ -13,8 +12,7 @@
             <StackPanel Margin="5">
                 <Label Background="{Binding CardGroup.GroupColor, Converter={StaticResource ColorToSolidColorBrushConverter}}"
                        Content="{Binding Name}" 
-                       FontSize="16" FontWeight="Black" Height="35"
-                       Foreground="Black">
+                       FontSize="16" FontWeight="Black" Height="35">
                 </Label>
                 <TextBlock HorizontalAlignment="Center"
                            Foreground="Black">
